--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,11 @@
 		<meta http-equiv="Content-Security-Policy"
 			content="default-src * data: gap: blob: https://ssl.gstatic.com http://localhost 'unsafe-eval' 'unsafe-inline';
 			style-src 'self' 'unsafe-inline';
-			script-src 'self' https://www.google-analytics.com/analytics.js https://widget.intercom.io/widget/hi3rzlw0 https://widget.intercom.io/widget/qa83i5n9 https://js.intercomcdn.com 'unsafe-inline' 'unsafe-eval';
+			script-src 'self' https://widget.intercom.io/widget/hi3rzlw0 https://widget.intercom.io/widget/qa83i5n9 https://js.intercomcdn.com 'unsafe-inline' 'unsafe-eval';
 			object-src 'none'; 
 			font-src 'self' https://js.intercomcdn.com/fonts/;  
-			img-src 'self' data: https://downloads.intercomcdn.com/i/o/  https://js.intercomcdn.com/images/ https://static.intercomassets.com/ https://www.google-analytics.com/r/collect https://www.google-analytics.com/collect https://stats.g.doubleclick.net/r/collect; 
-			connect-src 'self' https://a.y.at https://api-dev.yat.rocks https://api.changenow.io https://thingproxy.freeboard.io https://api.mymonero.com:443 https://api.mymonero.com:8443 https://api-iam.intercom.io https://cloudflare-dns.com data: blob:;">
+			img-src 'self' data: https://downloads.intercomcdn.com/i/o/  https://js.intercomcdn.com/images/ https://static.intercomassets.com; 
+			connect-src * data: blob:;">
 			<!-- script-src of unsafe-eval required to load wasm files at present but actual eval is disabled in renderer_setup_utils -->
 
         <meta name="format-detection" content="telephone=no">
